--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-fontan" role="tabpanel" aria-labelledby="pills-fontan-tab">
+            <div class="tab-pane fade show active" id="pills-fontan" role="tabpanel" aria-labelledby="pills-fontan-tab" align="center">
                 <img src="https://uploads-ssl.webflow.com/6138da237cabc830c0ea1841/6138e36f4dd00d2c5ff0078a_caption.jpg"
                      class="d-block w-100" alt="...">
                 <a style="z-index: 10; margin: 5px" href="https://yandex.ru/maps/org/muzykalny_fontan/35518213868/"
                    class="btn btn-outline-info" role="button">Маршрут</a>
             </div>
-            <div class="tab-pane fade" id="pills-Pushkin" role="tabpanel" aria-labelledby="pills-Pushkin-tab">
+            <div class="tab-pane fade" id="pills-Pushkin" role="tabpanel" aria-labelledby="pills-Pushkin-tab" align="center">
                 <img src="https://uploads-ssl.webflow.com/6138da237cabc830c0ea1841/6138e432e056287ef0d7d2b0_caption.jpg"
                      class="d-block w-100" alt="...">
                 <a style="z-index: 10; margin: 5px" href="https://yandex.ru/maps/org/a_s_pushkin/166514570742/"
                    class="btn btn-outline-info" role="button">Маршрут</a>
             </div>
-            <div class="tab-pane fade" id="pills-stena" role="tabpanel" aria-labelledby="pills-stena-tab">
+            <div class="tab-pane fade" id="pills-stena" role="tabpanel" aria-labelledby="pills-stena-tab" align="center">
                 <img src="https://uploads-ssl.webflow.com/6138da237cabc830c0ea1841/6138e48b27eb4d4b746a6a1a_caption.jpg"
                      class="d-block w-100" alt="...">
                 <a style="z-index: 10; margin: 5px" id="url_stena" href="https://yandex.ru/maps/org/krepostnaya_stena/36044235612/"
